--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   top: 0;    
   height: 100%;    
   width: 75%;    
-  background-color: #f57c00;    
+  background-color: #fff;    
   z-index: 0;    
   border-radius: 2px 0 0 2px;    
 }    
