--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 .battery-body {    
   width: 26px;    
   height: 11px;    
-  border: 1px solid #fff;    
+  border: 1px solid #008000;    
   border-radius: 3px;    
   position: relative;    
   background-color: #fff;    
@@ -90,7 +90,7 @@
   top: 0;    
   height: 100%;    
   width: 75%;    
-  background-color: #fff;    
+  background-color: #008000;    
   z-index: 0;    
   border-radius: 2px 0 0 2px;    
 }    
@@ -106,7 +106,8 @@
 }
 .battery-text {    
   position: relative;    
-  z-index: 1;    
+  z-index: 1;
+  top:2px;
   user-select: none;    
 }    
   
