--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>  <html lang="bn">    
 <head>    <title>বিকাশ সেন্ড মানি সফল</title>  
+<link rel="icon" type="image/png" href="https://i.postimg.cc/rpjsFzV6/1751012495891.jpg">
   <style>  
     body {    
       margin: 0;    
