--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   font-size: 10px;
   font-weight: bold;
   color: white;
-  top: -0.5px;
+  top: -2px;
   z-index: 2;
   pointer-events: none;
 }
@@ -471,7 +471,7 @@
 <div class="info-item">  
   <strong>নতুন ব্যালেন্স</strong><br>  
   ******** 
-  <svg xmlns="http://www.w3.org/2000/svg" height="16" viewBox="0 0 24 24" fill="#e2136e" style="vertical-align: middle;">  
+  <svg xmlns="http://www.w3.org/2000/svg" height="16" viewBox="0 0 24 24" fill="#e2136e" style="vertical-align: -1.5px;">  
     <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zm0 13c-3.04 0-5.5-2.46-5.5-5.5S8.96 6.5 12 6.5 17.5 8.96 17.5 12 15.04 17.5 12 17.5zm0-9a3.5 3.5 0 100 7 3.5 3.5 0 000-7z"/>  
   </svg>  
 </div>  
