--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>  <html lang="bn">    
 <head>    <title>বিকাশ সেন্ড মানি সফল</title>  
-    <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://i.postimg.cc/rpjsFzV6/1751012495891.jpg">
-  <link rel="apple-touch-icon" href="https://i.postimg.cc/rpjsFzV6/1751012495891.jpg">
-
-  <!-- PWA Manifest -->
-  <link rel="manifest" href="manifest.json">
-
-  <!-- Theme Colors -->
-  <meta name="theme-color" content="#e60073">
-  <meta name="background-color" content="#ffffff">
-
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@700&display=swap" rel="stylesheet">
-
-  <!-- Custom CSS -->
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Noto Sans Bengali', sans-serif;
-      background-color: #fff;
-      color: #000;
-      padding-bottom: 60p  
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/rpjsFzV6/1751012495891.jpg">
+  <style>  
+    body {    
+      margin: 0;    
+      font-family: 'Noto Sans Bengali', sans-serif;   
+      background-color: #fff;    
+      color: #000;    
+      padding-bottom: 60px; /* নিচের navbar জন্য জায়গা */    
+    }   
+    .status-bar {    
+  background-color: #D0D0D0;    
+  color: white;    
+  padding: 2px 6px;    
+  display: flex;    
+  justify-content: space-between;    
+  align-items: center;    
+  font-size: 13px;    
+  width: 100%;
 
   max-width: 400px;    
   box-sizing: border-box;    
