--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>  <html lang="bn">    
 <head>    <title>বিকাশ সেন্ড মানি সফল</title>  
-    <link rel="icon" type="image/png" href="https://i.postimg.cc/WzSZ5MLs/1748783430004.jpg">
+    <link rel="manifest" href="manifest.json">
+<link rel="apple-touch-icon" sizes="192x192" href="https://i.postimg.cc/WzSZ5MLs/1748783430004.jpg">
+<meta name="theme-color" content="#e60073">
   <style>  
     body {    
       margin: 0;    
