--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>  <html lang="bn">    
-<head>    <title>বিকাশ সেন্ড মানি সফল</title>  
-    <link rel="manifest" href="manifest.json">
-<link rel="manifest" href="manifest.json">
-<link rel="icon" type="image/png" href="https://i.postimg.cc/28VZgBWT/icon512.png">
-<link rel="apple-touch-icon" href="https://i.postimg.cc/28VZgBWT/icon512.png">
-<meta name="theme-color" content="#e60073">
+<head>    
+  <meta charset="UTF-8">    
+  <meta name="viewport" content="width=360, height=800, initial-scale=1.0">    
+  <title>বিকাশ সেন্ড মানি সফল</title>  
+  
+  <!-- ✅ বাংলা ফন্ট লিংক -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali&display=swap" rel="stylesheet">
+  
+  <!-- ✅ PWA এবং Favicon -->
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" type="image/png" href="https://i.postimg.cc/28VZgBWT/icon512.png">
+  <link rel="apple-touch-icon" href="https://i.postimg.cc/28VZgBWT/icon512.png">
+  <meta name="theme-color" content="#e60073">
+
   <style>  
     body {    
       margin: 0;    
-      font-family: 'Noto Sans Bengali', sans-serif;   
+      font-family: 'Noto Sans Bengali', sans-serif;  /* ✅ ফন্ট অ্যাপ্লাই */  
       background-color: #fff;    
       color: #000;    
       padding-bottom: 60px; /* নিচের navbar জন্য জায়গা */    
     }   
+    /* ... বাকি CSS আগের মতো থাকবে ... */
     .status-bar {    
   background-color: #D0D0D0;    
   color: white;    
