--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/png" href="https://i.postimg.cc/28VZgBWT/icon512.png">
   <link rel="apple-touch-icon" href="https://i.postimg.cc/28VZgBWT/icon512.png">
-  <meta name="theme-color" content="#e60073">
+  <meta name="theme-color" content="#D0D0D0">
 
   <style>  
     body {    
@@ -23,7 +23,7 @@
     }   
     /* ... বাকি CSS আগের মতো থাকবে ... */
     .status-bar {    
-  background-color: #D0D0D0;    
+  background-color: #;    
   color: white;    
   padding: 2px 6px;    
   display: flex;    
