--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }   
     /* ... বাকি CSS আগের মতো থাকবে ... */
     .status-bar {    
-  background-color: #;    
+  background-color: #D0D0D0;    
   color: white;    
   padding: 2px 6px;    
   display: flex;    
